# quant-kit

./: .gitignore  LICENSE  README.md
notebooks/: edit-distance-sim.md  equity-price-data.md  exposure-model.md  index-vol-model.md  kelly-sizing.md  option-data.md  option-pricing.md  yield-curve.md
quant-kit-app/: README.md  setup.cfg  setup.py
quant-kit-app/src/quant_kit_app/: __init__.py
quant-kit-core/: README.md  setup.cfg  setup.py
quant-kit-core/src/quant_kit_core/: __init__.py  exceptions.py  utils.py
quant-kit-core/src/quant_kit_core/distributions/: __init__.py  containers.py  functions.py
quant-kit-core/src/quant_kit_core/options/: __init__.py  containers.py  functions.py
quant-kit-core/src/quant_kit_core/time_series/: __init__.py  functions.py
