[metadata]
name = quant-kit-core
version = attr: quant_kit_core.__version__
description = "Quantitative Investment and Trading Toolkit - Core Python module"
license = MIT
url = https://github.com/libertininick/quant-kit
author = Nick Libertini
author_email = libertini.nick@gmail.com

[options]
python_requires = >= 3.10
packages = find:
package_dir = 
    = src
tests_require = 
    pytest
    hypothesis

[options.packages.find]
where = src
exclude = tests, tests.*

[tool.pytest]
python_files = test_*.py
testpaths = tests